--- a/MovieApp/Web.config
+++ b/MovieApp/Web.config
@@ -14,10 +14,29 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	
+		
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <authentication mode="Forms">
+		<forms loginUrl="~/Login/Index"></forms>
+	</authentication>
+	<membership defaultProvider="CustomMembersipProvider">
+		<providers>
+			<clear/>
+			<add name="CustomMembershipProvider" type="MovieApp.Models.CustomMembershipProvider"/>
+		</providers>
+	</membership>
+	  <roleManager enabled="true" defaultProvider="CustomRoleProvider">
+		  <providers>
+			  <clear/>
+			  <add name="CustomRoleProvider" type="MovieApp.Models.CustomRoleProvider"/>
+		  </providers>
+	  </roleManager>
   </system.web>
+	
+		
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
