--- a/MovieApp/MovieApp.csproj
+++ b/MovieApp/MovieApp.csproj
@@ -251,6 +251,7 @@
     <Content Include="Views\Movies\Search.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\Movies\Partial.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
